--- a/index.html
+++ b/index.html
@@ -4,15 +4,57 @@
 <head>
   <title>Gom's web page</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    table
+    {
+      border: 4px solid #ad7575;
+    }
+
+    td
+    {
+      border-bottom: 1px solid #ccc;
+      text-align: center;
+      padding: 10px;
+    }
+
+    th
+    {
+      background: #ad7575;
+    }
+  </style>
 </head>
 
 <body>
-
-  <h1><a href="index.html">Gom's web page</h1>
-  <ul>
-    <li><a href="HoS.html">Heroes of the storm</a></li>
-    <li><a href="DoD.html">Dig or die</li>
-    <li><a href="S_L.html">Spirit-Lunia</li>
-  </ul>
+  <h1><a href="index.html" style="color:#674040;">곰돌이의 웹 페이지</a></h1>
+  <div id="grid">
+    <ul>
+      <li ><a href="index.html">Information</a></li>
+      <li ><a href="HTML.html">HTML</a></li>
+      <li ><a href="CSS.html">CSS</a></li>
+      <li><a href="https://www.w3.org" title="W3C 메인 홈페이지" target="_blank">W3C</a></li>
+      <li><a href="https://caniuse.com" title="can i use 메인 홈페이지" target="_blank">Can I Ues</a></li>
+    </ul>
+    <div id="article">
+      <h2>Information</h2>
+      <table>
+        <tr>
+          <td colspan="4"><img src="메인사진.jpg" width="400" height="400"></td>
+        </tr>
+        <tr>
+          <th colspan="4" style="font-size:30px; text-align:center">박정훈</style></th>
+        </tr>
+        <tr>
+          <th style="width:50px">나이</th> <td style="width:90px">20살</td> <th style="width:50px">생일</th> <td style="width:90px">3월30일</td>
+        </tr>
+        <tr>
+          <th>혈액형</th> <td>O형</td> <th>거주지</th> <td>서울, 노원</td>
+        </tr>
+        <tr>
+          <th style="width:50px">Favor</th> <td colspan="3">고양이, 게임, 지구과학, 컴퓨터, 검정색</tr>
+        </tr>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
