--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <style>
-    table
+    #article table
     {
       border: 4px solid #ad7575;
     }
 
-    td
+    #article td
     {
       border-bottom: 1px solid #ccc;
       text-align: center;
       padding: 10px;
     }
 
-    th
+    #article th
     {
       background: #ad7575;
     }
@@ -27,13 +27,18 @@
 
 <body>
   <h1><a href="index.html" style="color:#674040;">곰돌이의 웹 페이지</a></h1>
+  <table style="border-collapse: collapse; width:100%; background:#8a7070;">
+    <tr>
+      <th style="border: 3px solid black;"><a href="index.html">Information</a></th>
+      <th style="border: 3px solid black;"><a href="HTML.html">HTML</a></th>
+      <th style="border: 3px solid black;"><a href="CSS.html">CSS</a></th>
+      <th style="border: 3px solid black;">W3C</th>
+      <th style="border: 3px solid black;">Opentutorials</th>
+    </tr>
+  </table>
   <div id="grid">
-    <ul>
-      <li ><a href="index.html">Information</a></li>
-      <li ><a href="HTML.html">HTML</a></li>
-      <li ><a href="CSS.html">CSS</a></li>
-      <li><a href="https://www.w3.org" title="W3C 메인 홈페이지" target="_blank">W3C</a></li>
-      <li><a href="https://caniuse.com" title="can i use 메인 홈페이지" target="_blank">Can I Ues</a></li>
+    <ul style="background:#8a7070;">
+      <li><a href:"https://qwcol032.github.io/Gom/web/index.html;">index.html</a></li>
     </ul>
     <div id="article">
       <h2>Information</h2>
