--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   </head>
 
   <body>
-    <h1><a href="index.HTML" style="color:#674040;">곰돌이의 웹 페이지</a></h1>
+    <h1><a href="index.html" style="color:#674040;">곰돌이의 웹 페이지</a></h1>
     <table style="border-collapse: collapse; width:100%; background:#9e8b8b;">
       <tr style="display:grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr;">
-        <th style="background:#734a4a;"><a href="index.HTML">Information</a></th>
+        <th style="background:#734a4a;"><a href="index.html">Information</a></th>
         <th><a href="HTML_main.php?id=HTML_main">HTML</a></th>
         <th><a href="CSS.html">CSS</a></th>
         <th><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></th>
